int: fix App entry points, allow load any resource, ej: app.html